--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "treegamewebsite",
-  "private": true,
+  "homepage": "https://jamessundstrom.github.io/TreeGame",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "scripts": 
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+}
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
